--- a/Advocate/templates/userprofile.html
+++ b/Advocate/templates/userprofile.html
@@ -374,22 +374,22 @@
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ fname }} {{ lname }}</span>
                             <img class="img-profile rounded-circle"
-                                 src="img/undraw_profile.svg">
+                                 src="/media/{{ profile }}">
                         </a>
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                              aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="/Userprofile">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Profile
                             </a>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="/Userprofile">
                                 <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Settings
                             </a>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="">
                                 <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Activity Log
                             </a>
@@ -423,8 +423,8 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="profile-card">
-                                <img src="" class="profile-image" alt="Profile Picture">
-                                <h3>Name</h3>
+                                <img src="/media/{{ profile }}" class="profile-image" alt="Profile Picture">
+                                <h3>{{ fname }} {{ lname }}</h3>
                                 <p class="job-title">Web Designer</p>
                             </div>
                         </div>
@@ -458,58 +458,58 @@
                                         <h5 class="card-title">Profile Details</h5>
                                         <div class="row mb-2">
                                             <div class="col-lg-4 label">First Name:</div>
-                                            <div class="col-lg-8"></div>
+                                            <div class="col-lg-8">{{ fname }}</div>
                                         </div>
                                         <br>
                                         <div class="row mb-2">
                                             <div class="col-lg-4 label">Last Name:</div>
-                                            <div class="col-lg-8"></div>
+                                            <div class="col-lg-8">{{ lname }}</div>
                                         </div>
                                         <br>
                                         <div class="row mb-2">
                                             <div class="col-lg-4 label">Company:</div>
-                                            <div class="col-lg-8"></div>
+                                            <div class="col-lg-8">{{ company }}</div>
                                         </div>
                                         <br>
                                         <div class="row mb-2">
                                             <div class="col-lg-4 label">Job:</div>
-                                            <div class="col-lg-8"></div>
+                                            <div class="col-lg-8">{{ job }}</div>
                                         </div>
                                         <br>
                                         <div class="row mb-2">
                                             <div class="col-lg-4 label">County:</div>
-                                            <div class="col-lg-8"></div>
+                                            <div class="col-lg-8">{{ county }}</div>
                                         </div>
                                         <br>
                                         <div class="row mb-2">
                                             <div class="col-lg-4 label">Address:</div>
-                                            <div class="col-lg-8"></div>
+                                            <div class="col-lg-8">{{ address }}</div>
                                         </div>
                                         <br>
                                         <div class="row mb-2">
                                             <div class="col-lg-4 label">Phone:</div>
-                                            <div class="col-lg-8"></div>
+                                            <div class="col-lg-8">{{ phone }}</div>
                                         </div>
                                         <br>
                                         <div class="row mb-2">
                                             <div class="col-lg-4 label">Email:</div>
-                                            <div class="col-lg-8"></div>
+                                            <div class="col-lg-8">{{ email }}</div>
                                         </div>
                                     </div>
 
                                     <!-- Edit Profile Tab -->
                                     <div class="tab-pane fade" id="edit" role="tabpanel">
-                                        <form action="" method="post" enctype="multipart/form-data">
+                                        <form action="/userprofileinsert" method="post" enctype="multipart/form-data">
                                             {% csrf_token %}
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
                                                 <input type="text" class="form-control" id="fname" name="fname"
-                                                       value="{{ email.first_name }}" readonly>
+                                                       value="{{ dat.first_name}}" readonly>
                                             </div>
                                             <div class="form-group">
                                                 <label for="fname">Last Name</label>
                                                 <input type="text" class="form-control" id="lname" name="lname"
-                                                       value="{{ email.last_name }}" readonly>
+                                                       value="{{ dat.last_name }}" readonly>
                                             </div>
                                             <div class="form-group">
                                                 <label for="fname">Company</label>
@@ -539,7 +539,7 @@
                                             <div class="form-group">
                                                 <label for="fname">Email</label>
                                                 <input type="email" class="form-control" id="email" name="email"
-                                                       value="{{ email.email }}" readonly>
+                                                       value="{{ dat.email }}" readonly>
                                             </div>
                                             <div class="form-group">
                                                 <label for="fname">Upload profile</label>
