--- a/Advocate/templates/userprofile.html
+++ b/Advocate/templates/userprofile.html
@@ -101,7 +101,7 @@
                 <span>Dashboard</span></a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="/index">
+            <a class="nav-link" href="/userprofile">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>User profile</span></a>
         </li>
