--- a/Advocate/templates/index.html
+++ b/Advocate/templates/index.html
@@ -72,7 +72,7 @@
             </a>
             <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="login.html">Personal Information</a>
+                    <a class="collapse-item" href="/personal_info">Personal Information</a>
                     <a class="collapse-item" href="register.html">Case Information</a>
                     <a class="collapse-item" href="forgot-password.html">Payment Information</a>
                 </div>
